# concordium-task3

./: .gitignore  README.md
contract/: Cargo.toml  donation.wasm.v1
contract/src/: lib.rs
frontend/: package.json
frontend/src/: App.tsx  ConnectedAccount.tsx  ContractDetails.tsx  ContractInvoker.tsx  Root.tsx  WalletConnectorButton.tsx
